--- a/Videography.html
+++ b/Videography.html
@@ -36,7 +36,7 @@
 						<p>video perisahan "Angkasa" tahun 2019</p>
 					</header>
 					<iframe width="420" height="315"
-						src="https://youtu.be/B8cOmII98bs">
+						src="https://www.youtube.com/embed/B8cOmII98bs">
 					</iframe>
 					<p>Cinematic berasal dari kata cinema yang artinya adalah film. Jadi video cinematic look adalah video yang terlihat seperti layaknya film. Makna film saat ini bergeser menjadi sebuah video yang dapat menyampaikan cerita dengan alur yang sudah terkonsep. Contoh film disini yaitu seperti Keluarga Cemara, Conjuring, Fast & Furios, atau pun film film marvel yang tayang di bioskop. Jadi video sinematik disini adalah sebuah cara bagaimana kita membuat video layaknya film dengan memaksimalkan teknik, visual, audio dan juga jalan cerita.</p>
 					<p>Istilah Video Cinematic Look sudah hadir sejak lama. Dahulu kamera REDcam, DSLR, Mirrorless serta kamera canggih lainnya belum muncul. Sehingga kebanyakan orang hanya mengandalkan kamera dengan media rekam betacam digital. Adapun alat dengan media tersebut masih memiliki kemampuan yang terbatas. Kemampuan rentang kontras yang masih sempit, dynamic range rendah, warna yang terbatas serta kemampuan DOP yang tidak bisa tipis sehingga membuat framing tidak bisa fokus kepada satu objek.</p>
